musica (2.22) unreleased; urgency=low

  * debian/postinst:
    - note the musica cache rebuild with an echo
    - don't background this (ie, block on it completing)
    - musica is not really functional until the index has run
  * debian/cron.hourly:
    - soften to a warning, exit zero when music dir doesn't exist
  * debian/control:
    - bump standards

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 10 Nov 2011 15:34:45 -0600

musica (2.21-0ubuntu1) precise; urgency=low

  * debian/cron.hourly: LP: #888218
    - exit on errors

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 10 Nov 2011 15:34:41 -0600

musica (2.20-0ubuntu1) precise; urgency=low

  * jplayer2.php:
    - added a jplayer2.php, which works with jplayer2; jplayer2 can't
      land in Ubuntu yet because the flash won't build from source
      using haxe; flash is required for mp3 support in Firefox
  * debian/cron.hourly: LP: #888218
    - ensure that the music directory exists, before indexing it

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 10 Nov 2011 10:13:20 -0600

musica (2.19-0ubuntu1) oneiric; urgency=low

  * debian/postinst:
    - immediately run an update

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 30 Jul 2011 11:15:22 -0500

musica (2.18-0ubuntu1) oneiric; urgency=low

  * index.php:
    - don't print broken images

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 29 Jul 2011 23:56:25 -0500

musica (2.17-0ubuntu1) oneiric; urgency=low

  [ Serge Hallyn ]
  * debian/cron.hourly: add -L to find options to support symlinks under
    /usr/share/music/musica.

  [ Dustin Kirkland ]
  * jplayer.php: LP: #811477
    - use the google hosted jquery.min.js until the local one in Debian/Ubuntu
      gets fixed
  * debian/cron.hourly, index.php, jplayer.php:
    - partial support for m4a
  * debian/control, index.php:
    - remove that nasty backtick call to eyeD3, use php-id3 instead

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 29 Jul 2011 19:38:42 -0500
