@@ -3,7 +3,7 @@ Section: web
 Priority: optional
 Maintainer: Dustin Kirkland <kirkland@ubuntu.com>
 Standards-Version: 3.9.3
-Build-Depends: debhelper (>= 6.0), mtasc
+Build-Depends: debhelper (>= 7), mtasc
 Homepage: http://launchpad.net/musica
 Vcs-Bzr: http://bazaar.launchpad.net/~kirkland/musica/main
 
