@@ -1,49 +1,4 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
-#
-# debian/rules makefile for musica
 
-# Uncomment this to turn on verbose mode.
-# export DH_VERBOSE=1
-
-PKG=musica
-VER=`head -n 1 debian/changelog | sed 's/^.*(//' | sed 's/).*//' | sed 's/-.*//'`
-
-get-orig-source:
-	bzr export ../${PKG}_${VER}.orig.tar.gz
-
-build:
-	dh_testdir
-
-clean:
-	rm -rf debian/musica debian/files debian/musica.debhelper.log jplayer/js/Jplayer.swf
-
-install:build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs -X.bzr
-	dh_install -X.bzr
-
-# Everything else is handled by dh_install
-
-# Build architecture-independent files here.
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-	dh_installdocs -X.bzr
-	dh_installchangelogs docs/README
-	dh_installcron
-	dh_link
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_gencontrol
-	dh_builddeb
-
-binary: binary-indep
-.PHONY: build clean binary-indep binary install
-
-binary-arch:
+%:
+	dh $@
