@@ -8,8 +8,10 @@ musica (2.22) unreleased; urgency=low
     - soften to a warning, exit zero when music dir doesn't exist
   * debian/control:
     - bump standards
+  * debian/control, debian/rules:
+    - switch to simpler dh build
 
- -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 10 Nov 2011 15:34:45 -0600
+ -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 31 Oct 2012 17:22:12 +0100
 
 musica (2.21-0ubuntu1) precise; urgency=low
 
